--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   perspective: 1000px;
 }
 
-.card {
+.one-card {
   width: 200px;
   height: 300px;
   position: relative;
@@ -27,7 +27,7 @@
   transition: .5s;
 }
 
-.card.flip {
+.one-card.flip {
     transform: rotateY(180deg)
 }
 
